# dxfeed-jni-native-sdk

./: .gitignore  README.md  pom.xml
native/: CMakeLists.txt  build_release.sh  main.cpp
native/jni-lib/: CMakeLists.txt  JNIBridgeImpl.cpp  lib.cc
native/jni-lib/include/api/: Api.h  Connection.h  Connection.hpp  DxFeed.h  EventTypes.h  Subscription.h  TimeAndSale.h
native/jni-lib/include/api/utils/: BitUtils.hpp  Diagnostic.h  JavaProperty.h  LoadLibrary.h  LoadLibrary.hpp  MathUtil.h  StopWatch.h  StringUtils.hpp  TimeAndSaleFormatter.h  TimeUtil.h
native/jni-lib/src/: Api.cpp  Connection.cpp  DxFeed.cpp  JavaProperty.cpp  LoadJavaVm.cpp  LoadLibrary.cpp  Subscription.cpp
native/jni-lib/src/utils/: Diagnostic.cpp  ProcessPriority.cpp  StopWatch.cpp  StringUtils.cpp  TimeAndSaleFormatter.cpp  Timer.cpp
src/main/c/: .gitignore  CMakeLists.txt  Common.cmake  PlatformInfo.cmake  build_demo_release.cmd  build_demo_release.sh  build_release.cmd  build_release.sh  main.cpp
src/main/c/cmake/: FindJava.cmake  FindJniNativeSdk.cmake  PlatformInfo.cmake  SetupOutputDirectory.cmake
src/main/c/demo/: CMakeLists.txt  Readme.md  demo.cpp
src/main/c/jni-lib/: CMakeLists.txt  JNIBridgeImpl.cpp  dllmain.cpp  jni-lib.vcxproj
src/main/c/jni-lib/include/api/: Api.h  Subscription.hpp  TimeAndSale.h  dxfg_api.h  dxfg_catch_exception.h  dxfg_endpoint.h  dxfg_event_model.h  dxfg_events.h  dxfg_feed.h  dxfg_ipf.h  dxfg_javac.h  dxfg_ondemand.h  dxfg_publisher.h  dxfg_qds.h  dxfg_schedule.h  dxfg_subscription.h  dxfg_system.h  dxfg_time_format.h  graal_isolate.h
src/main/c/jni-lib/include/api/utils/: JavaProperty.hpp  MathUtil.hpp  StopWatch.hpp  StringUtils.hpp  TimeAndSaleFormatter.hpp
src/main/c/jni-lib/include/dxfeed/: Connection.hpp  DXEndpoint.hpp  DxContext.hpp  DxEndpoint.hpp  DxEndpointBuilder.hpp  DxEventListener.hpp  DxEventT.hpp  DxFeed.h  DxFeed.hpp  DxFeedContext.hpp  DxIndexedEventSource.hpp  DxLastingEvent.hpp  DxOrderSource.hpp  DxPublisher.hpp  DxStateChangeListener.hpp  DxSubscription.hpp  DxSymbol.hpp  DxSymol.hpp  JavaProperty.hpp  Subscription.hpp
src/main/c/jni-lib/include/dxfeed/events/: CandleMapping.h  CandleMapping.hpp  ConfigurationMapping.h  ConfigurationMapping.hpp  EventReader.h  GreeksMapping.h  GreeksMapping.hpp  MessageMapping.h  MessageMapping.hpp  OptionSaleMapping.h  OptionSaleMapping.hpp  OrderMapping.h  OrderMapping.hpp  ProfileMapping.h  ProfileMapping.hpp  QuoteMapping.h  QuoteMapping.hpp  SeriesMapping.h  SeriesMapping.hpp  SummaryMapping.h  SummaryMapping.hpp  TheoPriceMapping.h  TheoPriceMapping.hpp  TimeAndSaleMapping.h  TimeAndSaleMapping.hpp  TradeMapping.h  TradeMapping.hpp  UnderlyingMapping.h  UnderlyingMapping.hpp
src/main/c/jni-lib/include/dxfeed/listeners/: DxEventListener.hpp  DxStateChangeListener.hpp  DxSubscriptionChangeListener.hpp
src/main/c/jni-lib/include/dxfeed/utils/: Base.h  ByteReader.hpp  ByteWriter.hpp  DxThreadException.hpp  InitJavaVm.hpp  JNICommon.h  JNICommon.hpp  JNIUtils.hpp  JavaProperty.hpp  LoadJavaVm.hpp  LoadJvmLib.h  LoadJvmLib.hpp  LoadLibrary.hpp  NativeEventData.hpp  NativeEventList.hpp  NativeEventReader.hpp  NativeEventWriter.hpp  NativeEventsList.hpp  StringUtils.hpp  TimeUtil.hpp  UserDataSync.hpp
src/main/c/jni-lib/include/dxfeed/vm/: CriticalSection.hpp  JavaVmInstance.hpp
src/main/c/jni-lib/include/javah/: com_dxfeed_api_DxEndpointJni.h  com_dxfeed_api_DxFeedJni.h  com_dxfeed_api_DxSubscriptionJni.h  com_dxfeed_api_JNIDXFeedEventListener.h  com_dxfeed_api_JNIPropertyChangeListener.h  com_dxfeed_api_JniTest.h
src/main/c/jni-lib/src/: Api.cpp  Connection.cpp  DxContext.cpp  DxEndpoint.cpp  DxEndpointBuilder.cpp  DxEventListener.cpp  DxEventT.cpp  DxFeed.cpp  DxIndexedEventSource.cpp  DxLastingEvent.cpp  DxOrderSource.cpp  DxPublisher.cpp  DxStateChangeListener.cpp  DxSubscription.cpp  DxSymbol.cpp  DxfgContext.cpp  InitJavaVm.cpp  JavaProperty.cpp  LoadJavaVm.cpp  LoadJvmLib.cpp  LoadLibrary.cpp  Subscription.cpp  dllmain.cpp  dxfg_api.cpp
src/main/c/jni-lib/src/api/: dxfg_api.cpp  dxfg_catch_exception.cpp  dxfg_dxfeed.cpp  dxfg_endpoint.cpp  dxfg_event_model.cpp  dxfg_events.cpp  dxfg_ipf.cpp  dxfg_ondemand.cpp  dxfg_publisher.cpp  dxfg_qds.cpp  dxfg_schedule.cpp  dxfg_subscription.cpp  dxfg_system.cpp  dxfg_time_format.cpp  graal_isolate.cpp
src/main/c/jni-lib/src/events/: CandleMapping.cpp  ConfigurationMapping.cpp  EventReader.cpp  GreeksMapping.cpp  MessageMapping.cpp  OptionSaleMapping.cpp  OrderMapping.cpp  ProfileMapping.cpp  QuoteMapping.cpp  SeriesMapping.cpp  SummaryMapping.cpp  TheoPriceMapping.cpp  TimeAnsSaleMapping.cpp  TradeMapping.cpp  UnderlyingMapping.cpp
src/main/c/jni-lib/src/listeners/: DxEventListener.cpp  DxStateChangeListener.cpp  DxSubscriptionChangeListener.cpp
src/main/c/jni-lib/src/utils/: ByteReader.cpp  ByteWriter.cpp  Diagnostic.cpp  DxThreadException.cpp  JNIBridgeImpl.cpp  JNIUtils.cpp  LoadJvmLib.cpp  NativeEventData.cpp  NativeEventList.cpp  NativeEventReader.cpp  NativeEventWriter.cpp  NativeEventsList.cpp  ProcessPriority.cpp  StopWatch.cpp  StringUtils.cpp  TimeAndSaleFormatter.cpp  Timer.cpp
src/main/c/jni-lib/src/utils/java/: DxFeedJniClass.cpp  DxTimeFormat.cpp  JavaLangClass.cpp  JavaLangSystem.cpp  JavaLogger.cpp  JavaTimeFormat.cpp
src/main/c/samples/: CMakeLists.txt  Readme.md  main.cpp
src/main/c/samples/ConvertTapeFile/: CMakeLists.txt  main.cpp
src/main/c/samples/DxFeedConnect/: CMakeLists.txt  main.cpp
src/main/c/samples/DxFeedFileParser/: CMakeLists.txt  main.cpp
src/main/c/samples/DxFeedSample/: CMakeLists.txt  dxfeed.properties  main.cpp
src/main/c/samples/DxFeedSubscriptionChangeListener/: CMakeLists.txt  main.cpp
src/main/c/samples/PrintQuoteEvents/: CMakeLists.txt  main.cpp
src/main/c/samples/WriteTapeFile/: CMakeLists.txt  main.cpp
src/main/c/samples/include/: Diagnostic.hpp  StopWatch.hpp  StringUtils.hpp  TimeAndSaleFormatter.hpp
src/main/c/samples/src/: Diagnostic.cpp  StopWatch.cpp  Timer.cpp
src/main/c/samples/src/utils/: StringUtils.cpp  TimeAndSaleFormatter.cpp
(+72 files in other folders)
